Issue #2931142 by jwilson3: Consistent whitespace below IU panel chunks

--- a/css/theme.css
+++ b/css/theme.css
@@ -14,3 +14,8 @@
   flex-direction: column;
   justify-content: center;
 }
+
+
+.panel-text>:last-child {
+  margin-bottom: 0;
+}
